# visOS

./: CMakeLists.txt
app/: CMakeLists.txt
app/cli/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake
src/core/: CMakeLists.txt  cpu_state.hpp  kernel_event.hpp  process_control_block.cpp  process_control_block.hpp  process_state.hpp  program_metadata.hpp  register_set.hpp  resource_descriptor.hpp  scheduling_policy.hpp  syscall.hpp  syscall_profile.hpp  types.hpp
src/kernel/: CMakeLists.txt  kernel.cpp  kernel.hpp  simulation_engine.cpp  simulation_engine.hpp
src/services/: CMakeLists.txt  blocked_queue.cpp  blocked_queue.hpp  clock_service.cpp  clock_service.hpp  cpu.cpp  cpu.hpp  memory_manager.cpp  memory_manager.hpp  program_store.cpp  program_store.hpp  ready_queue.cpp  ready_queue.hpp  scheduler.cpp  scheduler.hpp  syscall_handler.cpp  syscall_handler.hpp  timer_interrupt.cpp  timer_interrupt.hpp
src/services/io/: io_device_simulator.cpp  io_device_simulator.hpp
src/services/scheduling/: fcfs_strategy.cpp  fcfs_strategy.hpp  priority_strategy.cpp  priority_strategy.hpp  round_robin_strategy.cpp  round_robin_strategy.hpp  scheduling_strategy.hpp
src/util/: CMakeLists.txt  logger.cpp  logger.hpp  pid_generator.cpp  pid_generator.hpp
test/services/: test_clock_service.cpp  test_memory_manager.cpp  test_scheduling_strategies.cpp
tests/: CMakeLists.txt
tests/core/: test_process_control_block.cpp  test_process_state_transitions.cpp  test_program_metadata.cpp
tests/services/: test_cpu.cpp  test_program_store.cpp  test_scheduler.cpp  test_syscall_handler.cpp
